# MultiScaleErosion

./: .gitmodules  CMakeLists.txt  README.md  k.p.aux.xml
cmake/: geotiff.cmake  glew.cmake  glfw.cmake  glm.cmake
code/: gpu_shader.h  gpu_shader_erosion.cpp  gpu_shader_thermal.cpp  main.cpp
data/: test.png.aux.xml
data/shaders/: deposition.glsl  erosion.glsl  heightfield_raytrace_330.glsl  heightfield_raytrace_430.glsl  hydraulic_erosion.glsl  inspect_shader.glsl  soil_deposition.glsl  spe_shader.glsl  thermal.glsl
data/tifs/: USGS_256_height.tif  USGS_256_soil.tif  USGS_256_soil_filled.tif  clay_mean_point_0.tif  clay_mean_point_0_scaled.png.aux.xml  clay_mean_point_0_utm.tif  composite_solus100_1.tif  jacksonhole.tif  lat2324_lon-82-81.tif  mesaverde.tif  terrain_out.tif  test.png.aux.xml
src/: CMakeLists.txt
src/code/: CMakeLists.txt
src/code/include/: box2.h  gpu_shader.h  scalarfield2.h  terrainwidget.h  texture.h  write_16_png.h
src/code/src/: ImFileDialog.cpp  box2.cpp  compute_shader.cpp  compute_shader.h  geotiff.h  gpu_shader_deposition.cpp  gpu_shader_erosion.cpp  gpu_shader_thermal.cpp  inspectwidget.cpp  inspectwidget.h  main.cpp  render_texture.h  scalarfield2.cpp  terrainwidget.cpp  window.cpp  write_16_png.cpp
src/imgui/: CMakeLists.txt
src/imgui_tex_inspect/: CMakeLists.txt  imgui_tex_inspect.cpp  imgui_tex_inspect_internal.h
